/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.loopring.lightcone.proto;

import "core.proto";
import "actors_data.proto";


/////////////////////////////////////////////////////////////////////
// CONTAINS MESSAGES RELATED TO ACTOR RECOVER ONLY!!!
/////////////////////////////////////////////////////////////////////

message ActorRecover {
    message Request {
        int64 account_entity_id = 1;
        org.loopring.lightcone.core.data.MarketPair market_pair = 2;
        string sender = 3;
    }

    message CancelFor {
        string requester_path = 1;
    }

    message RequestBatch {
        int64 batch_id = 1;
        map<string, Request> request_map = 2; // requester_path -> Request
    }

    message Finished {
        bool timeout = 1;
    }

    message RetrieveOrders {
        int64 last_order_id = 1;
    }
    message Timeout{}

    message RecoverOrderReq {
        RawOrder raw_order = 1;
    }

    message OrderRecoverResult {
        string order_id = 1;
        bool successful = 2;
    }
}